# Lamia

./: LAMIA_ENHANCED_v0.3.0c_SUMMARY.md  LAMIA_MARKET_READY_SUMMARY.md  README.md  RevolutionaryManufacturingDemo_manufacturing.lamia  index_updated.html  lamia_bambu_integration  lamia_bambu_integration.cpp  lamia_benchmark_results.txt  lamia_block_editor.hpp  lamia_bridge_manufacturing.cpp  lamia_bridge_simple  lamia_bridge_simple.cpp  lamia_browser_validation.hpp  lamia_compiler.cpp  lamia_compiler_v3  lamia_compiler_v3.cpp  lamia_complete_revolutionary_framework.cpp  lamia_complete_revolutionary_framework.hpp  lamia_docs_generator  lamia_docs_generator.cpp  lamia_enhanced_implementation.cpp  lamia_extensible_architecture.hpp  lamia_framework_complete.cpp  lamia_github_generator.cpp  lamia_language_compiler.cpp  lamia_language_specification.hpp  lamia_libs_generator  lamia_libs_generator.cpp  lamia_manufacturing_final.cpp  lamia_manufacturing_simplified.cpp  lamia_minimal.hpp  lamia_minimal_implementation.cpp  lamia_native_compiler.cpp  lamia_plugin_marketplace.cpp  lamia_plugins_simple  lamia_plugins_simple.cpp  lamia_real_benchmarks  lamia_real_benchmarks.cpp  lamia_real_compiler  lamia_real_compiler.cpp  (+8 more)
Lamia-Docs/: CHANGELOG.md  CONTRIBUTING.md  README.md  _config.yml  build_docs.sh  index.md
Lamia-Docs/api/: README.md  ai_command_orchestrator.md  api_gateway_complete.md  arduino_bridge.md  cnc_bridge.md  collective_borg.md  deployment_complete.md  dual_process_segmentation.md  iot_bridge.md  lamia_3d_emotion.md  lamia_analytics_engine.md  lamia_blockchain_core.md  lamia_cloud_native.md  lamia_concurrency_core.md  lamia_core.md  lamia_crystal_system.md  lamia_edge_computing.md  lamia_gcode_native.md  lamia_lexer.md  lamia_ludicrous_mode.md  lamia_manifest_engine.md  lamia_memory_optimizer.md  lamia_neural_interface.md  lamia_quantum_bridges.md  lamia_realtime_engine.md  lamia_revolutionary_framework.md  lamia_security_layer.md  lamia_social_protocols.md  lamia_transpiler.md  marketplace_gamification.md  medusa_universal_database_connector.md  nanotech.md  picard_orchestrator.md  reconstructar_core.md  reproducible_plan_system.md  sevenofnine_viewer.md  smudger_healing.md  universal_3d_interface.md  xml_mutation_engine.md
Lamia-Docs/architecture/: overview.md
Lamia-Docs/benchmarks/: performance.md
Lamia-Docs/examples/: 01_basic.lamia  02_manufacturing.lamia  03_arduino.lamia  04_emotion.lamia  README.md
Lamia-Docs/guides/: getting-started.md
Lamia-Docs/specs/: manifest-language.md
Lamia-Libs/: LIBRARY_CATALOG_V030C.md  LIBRARY_ORGANIZATION_SUMMARY.md  README.md
Lamia-Libs/include/: MEDUSASERV_PATHING_ENGINE.hpp  MEDUSASERV_SSL_MANAGER.hpp  MEDUSASERV_SSL_VERBOSE_ENGINE.hpp  MedusaAuthenticationSystem.hpp  MedusaAuthenticationSystem_stub.hpp  MedusaDatabaseManager.hpp  MedusaEncryption.hpp  MedusaEncryption_stub.hpp  MedusaGroundUpSecurity.hpp  MedusaGroundUpSecurity_stub.hpp  MedusaServDependencyInterlinker.hpp  MedusaTriforceDatabase.hpp  MedusaUnifiedServer.hpp  SUBDOMAIN_MANAGER.hpp  fake_database.h  intelligent_interlinking_system.hpp  lamia_language_specification.hpp  lamia_minimal.hpp  libmedusa_encryption.h  medusa_editor.h  medusa_security.h  mongodb_impl.hpp  pg_impl.hpp  production_credentials_vault_template.hpp  security_backbone.hpp
Lamia-Libs/medusa-core/: libmedusaserv_compatibility_engine.so.backup  libmedusaserv_http_engine.so.backup
Lamia-Libs/shared/: libmedusaserv_core_engine.so.backup  libmedusaserv_security_core.so.backup
Lamia-Libs/src/: MEDUSASERV_PATHING_ENGINE.cpp  MEDUSASERV_SSL_MANAGER.cpp  MEDUSASERV_SSL_VERBOSE_ENGINE.cpp  SUBDOMAIN_MANAGER.cpp  advanced_ssl_manager_native.cpp  jwt_session_management_triforce_native.cpp  (+5 more)
Lamia-Releases/: RELEASE_NOTES.md
lamia_real_output/: app.js  index.html
lib/3d_emotions/: API_REFERENCE.md  CMakeLists.txt  EXAMPLES.md  INSTALLATION.md  Makefile  README.md  SECURITY.md  lamia_3d_emotion_core.cpp  lamia_3d_emotion_core.hpp  lamia_3d_emotion_core_build.cpp  lamia_3d_emotion_core_build.hpp  lamia_3d_emotion_core_standalone.cpp  lamia_3d_emotion_demo
lib/3d_emotions/established_libs/: libMedusaEmotion3DCore.hpp  libMedusaEmotionRenderer.hpp  libMedusaEmotionSpatial.hpp  libMedusaEmotionSynthesis.hpp  libMedusaNativeCpp.hpp  libMedusaSecurityIcewall.hpp  libMedusaTriforceDB.hpp  libMedusaYorkshireStandards.hpp
manufacturing_bridges/: Makefile  arduino_bridge.cpp  arduino_bridge.hpp  cnc_bridge.cpp  cnc_bridge.hpp  iot_bridge.cpp  iot_bridge.hpp
mod_lamia/: Makefile  README.md  medusaserv_auth_fixed.cpp  medusaserv_auth_production
scripts/: deploy_secure.sh  start_secure.sh
(+57 files in other folders)
